--- a/package.json
+++ b/package.json
@@ -9,5 +9,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "prettier": "3.1.0",
+    "lint": "lint:fix"
+  }
 }
