--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,4 +23,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint code
-        run: npm run lint
+        run: npm run lint:fix
