--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -22,5 +22,7 @@ jobs:
         run: node --version
       - name: Install dependencies
         run: npm install
+      - name: Grant execute permission to prettier
+        run: chmod +x node_modules/.bin/prettier
       - name: Lint code
         run: npm run lint:fix
